add_custom_{command,target}: Add COMMAND_EXPAND_LISTS option

This option allows lists generated by generator expressions to be expanded.

Closes: #15935